--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
     
       <div class="container">
 
-        <h1>Dodati knjigu</h1>
+        <h1 class="text-primary my-3">Dodati knjigu</h1>
 
         <form id="forma-knige" class="form-group">
             <div>
-                <label for="naslov">Naslov</label>
+                <label for="naslov"> <span class="font-italic">Naslov:</span></label>
                 <input type="text" id="naslov" class="form-control">
             </div>
 
-            <div>
-                <label for="autor">Autor</label>
-                <input type="text" id="autor" class="form-control">
+            <div class="mt-3">
+                <label for="autor"><span class="font-italic">Autor:</span></label>
+                <input  type="text" id="autor" class="form-control">
             </div>
 
             <div>
-              <input type="submit" class="btn btn-primary mt-sm-4" value="dodati">
+              <input type="submit" class="btn btn-outline-primary btn-block mt-4" value="DODATI">
             </div>
 
 
